objects/Notification_Group__c.object
<CustomObject>
    <customHelpPage>General_Deal_Management</customHelpPage>
    <fields>
        <fullName>Collateral_Monitoring__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collateral Monitoring</label>
        <referenceTo>Collateral_Monitoring__c</referenceTo>
        <relationshipLabel>Notification Groups</relationshipLabel>
        <relationshipName>Notification_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Collateral_Valuation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collateral Valuation</label>
        <referenceTo>Collateral_Valuation__c</referenceTo>
        <relationshipLabel>Notification Groups</relationshipLabel>
        <relationshipName>Notification_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Distribution_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distribution Group</label>
        <referenceTo>Distribution_Group__c</referenceTo>
        <relationshipLabel>Notification Groups</relationshipLabel>
        <relationshipName>Notification_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Drawdown__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Drawdown</label>
        <referenceTo>Drawdown__c</referenceTo>
        <relationshipLabel>Notification Groups</relationshipLabel>
        <relationshipName>Notification_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <formula>Distribution_Group__r.Email_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fit_To_Lend__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fit To Lend Checklist</label>
        <referenceTo>Fit_To_Lend_Checklist__c</referenceTo>
        <relationshipLabel>Notification Groups</relationshipLabel>
        <relationshipName>Notification_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group_Type__c</fullName>
        <formula>TEXT(Distribution_Group__r.Group_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Margin_Ratchet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Margin Ratchet</label>
        <referenceTo>Margin_Ratchet__c</referenceTo>
        <relationshipLabel>Notification Groups</relationshipLabel>
        <relationshipName>Notification_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trigger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trigger</label>
        <referenceTo>Trigger__c</referenceTo>
        <relationshipLabel>Notification Groups</relationshipLabel>
        <relationshipName>Notification_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Notification Group</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Notification Group No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notification Groups</pluralLabel>
    <recordTypes>
        <fullName>Collateral_Monitoring</fullName>
        <active>true</active>
        <label>Collateral Monitoring</label>
    </recordTypes>
    <recordTypes>
        <fullName>Collateral_Valuation</fullName>
        <active>true</active>
        <label>Collateral Valuation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Drawdown</fullName>
        <active>true</active>
        <label>Drawdown</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fit_To_Lend_Checklist</fullName>
        <active>true</active>
        <label>Fit To Lend Checklist</label>
    </recordTypes>
    <recordTypes>
        <fullName>Margin_Ratchet</fullName>
        <active>true</active>
        <label>Margin Ratchet</label>
    </recordTypes>
    <recordTypes>
        <fullName>Trigger</fullName>
        <active>true</active>
        <label>Trigger</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>